<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bghome"
    tools:context=".Quiz.QuizActivity">
    <TextView
        android:id="@+id/quizHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:background="#90ffffff"
        android:backgroundTint="@color/black"
        android:drawablePadding="20sp"
        android:gravity="center_horizontal"
        android:text="@string/r_spunde_corect_la_ntrebare_pentru_a_primi_puncte_bonus"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/intrebare"
        android:layout_below="@id/quizHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        android:background="#90ffffff"
        android:backgroundTint="@color/black"
        android:drawablePadding="20sp"
        android:gravity="center_horizontal"
        android:text="@string/ntrebare"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intrebare"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_4" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/continueGame"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="600dp"
        android:background="@drawable/continue_game"
        android:clickable="false"
        android:contentDescription="@string/play"
        android:visibility="visible"
        android:saveEnabled="false"
        />

</RelativeLayout>