<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bghome"
    tools:context=".MiniGames.OrientationGameActivity">

    <TextView
        android:id="@+id/memoryGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#90ffffff"
        android:backgroundTint="@color/black"
        android:drawablePadding="20sp"
        android:gravity="center_horizontal"
        android:text="@string/num_r_c_te_p_s_ri_se_uit_spre_dreapta_i_c_te_spre_st_nga"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <ImageView
        android:id="@+id/dreapta"
        android:layout_width="607dp"
        android:layout_height="98dp"
        android:layout_below="@id/memoryGame"
        android:layout_marginStart="-120dp"
        android:layout_marginTop="9dp"
        android:scaleType="centerInside"
        android:src="@drawable/dreapta" />

    <EditText
        android:id="@+id/ans1"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_below="@id/memoryGame"
        android:layout_marginStart="250dp"
        android:layout_marginTop="35dp"
        android:background="#90ffffff"
        android:backgroundTint="@color/white"
        android:hint="@string/r_spuns" />

    <EditText
        android:id="@+id/ans2"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_below="@id/memoryGame"
        android:layout_marginStart="430dp"
        android:layout_marginTop="35dp"
        android:background="#90ffffff"
        android:backgroundTint="@color/white"
        android:hint="@string/r_spuns" />

    <ImageView
        android:id="@+id/stanga"
        android:layout_width="504dp"
        android:layout_height="104dp"
        android:layout_below="@id/memoryGame"
        android:layout_marginStart="380dp"
        android:layout_marginTop="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/stanga" />

    <ImageView
        android:id="@+id/match1"
        android:layout_width="800dp"
        android:layout_height="280dp"
        android:layout_below="@id/dreapta"
        android:layout_marginStart="10dp"
        android:layout_marginTop="19dp"
        android:scaleType="centerInside"
        android:src="@drawable/birds"
        />

    <ImageButton
        android:id="@+id/continueGame"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="670dp"
        android:background="@drawable/continue_game"
        android:clickable="false"
        android:contentDescription="@string/play"
        />
</RelativeLayout>